@@ -1,3 +1,10 @@
+2006-12-13  Markus Schiltknecht  <markus@bluegap.ch>
+
+	Made a lua tester function more bullet proof.
+
+	* tester.lua (samelines): do not throw a format error if
+	the file ends before expected.
+
 2006-12-12  Ben Walton  <bdwalton@gmail.com>
  
         * cmd_ws_cc: Added mtn mkdir
